# marine-risk-mapping

./: .dockerignore  .env.example  .env.prod.example  .gitignore  .pre-commit-config.yaml  CREDITS.md  README.md  TODO.md  package-lock.json  pyproject.toml
.github/: copilot-instructions.md
backend/: Dockerfile  __init__.py  app.py  config.py  migrations.py  requirements-runtime.txt
backend/api/: __init__.py  audio.py  auth.py  events.py  export.py  external_events.py  health.py  layers.py  macro.py  media.py  photo.py  risk.py  sightings.py  species.py  submissions.py  traffic.py  vessels.py  violations.py  zones.py
backend/models/: audio.py  auth.py  common.py  events.py  external_events.py  layers.py  macro.py  photo.py  risk.py  sightings.py  species.py  submissions.py  traffic.py  vessels.py  violations.py  zones.py
backend/services/: audio.py  auth.py  database.py  events.py  external_events.py  layers.py  macro.py  obis_export.py  photo.py  reputation.py  risk.py  sightings.py  species.py  submissions.py  traffic.py  vessels.py  violations.py  zones.py
docker/: .env.example  Caddyfile  docker-compose.prod.yml  docker-compose.yml
docs/: DEPLOYMENT.md  manual_data_acquisition.md  noaa_permission_email.txt
frontend/: .env.production.example  .vercelignore  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vercel.json
frontend/public/species/: CREDITS.md
frontend/src/app/: Providers.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/attribution/: page.tsx
frontend/src/app/auth/: page.tsx
frontend/src/app/classify/: layout.tsx  page.tsx
frontend/src/app/community/: layout.tsx  page.tsx
frontend/src/components/: AudioClassifier.tsx  AudioWaveform.tsx  CelebrationOverlay.tsx  CelebrationWhaleScene.tsx  CellDetail.tsx  CheckMyRisk.tsx  CommentSection.tsx  CoverageMap.tsx  EventsPanel.tsx  IDHelper.tsx  Legend.tsx  LocationPin.tsx  MapView.tsx  Nav.tsx  PhotoClassifier.tsx  RevealOnScroll.tsx  Sidebar.tsx  SightingForm.tsx  SightingGlobe.tsx  SlowZoneWarning.tsx  SpeciesPicker.tsx  SubmissionMap.tsx  UserAvatar.tsx  VesselManager.tsx  ViolationForm.tsx  ZoneDetail.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useMacroData.ts  useMapData.ts
frontend/src/lib/: api.ts  colors.ts  config.ts  types.ts
notebooks/data_ingestion/: 01_ais_download.ipynb  02_explore_cetaceans.ipynb  03_explore_bathymetry.ipynb  04_explore_mpa.ipynb
notebooks/data_quality/: 01_quality_report.ipynb
orchestration/: constants.py  definitions.py
orchestration/assets/: aggregation.py  database.py  dbt_assets.py  ingestion.py  ml.py
pipeline/: __init__.py  config.py  utils.py
pipeline/aggregation/: __init__.py  aggregate_ais.py  aggregate_macro_grid.py  assign_cetacean_h3.py  assign_ship_strike_h3.py  compute_proximity.py  generate_contours.py  sample_bathymetry.py
pipeline/analysis/: __init__.py  audit_training_data.py  compare_importances.py  evaluate.py  extract_features.py  register_model.py  score_future_isdm.py  score_future_sdm.py  setup_ec2_gpu.sh  train_arcface_classifier.py  train_arcface_remote.py  train_audio_classifier.py  train_isdm_model.py  train_photo_classifier.py  train_sdm_model.py  train_sdm_seasonal.py  train_strike_model.py  validate_traffic_risk.py
pipeline/audio/: __init__.py  classify.py  preprocess.py
pipeline/database/: __init__.py  create_schema.py  duckdb_views.py  load_data.py  load_isdm_projections.py  load_ml_predictions.py  load_sdm_predictions.py  load_sdm_projections.py
pipeline/ingestion/: __init__.py  download_ais.py  download_bia.py  download_cetaceans.py  download_cmip6_projections.py  download_critical_habitat.py  download_inat_photos.py  download_mpa.py  download_nisi_2024.py  download_ocean_covariates.py  download_ocean_mask.py  download_shipping_lanes.py  download_slow_zones.py  download_sma.py  download_whale_audio.py  download_whale_photos.py  parse_ship_strikes.py  upload_parquet_s3.py
pipeline/photo/: __init__.py  arcface_classify.py  classify.py  preprocess.py
pipeline/validation/: quality_report.py  schemas.py
scripts/: _check_users.py  bootstrap_vm.sh  create_external_events.py  crosswalk_expansion.json  download_final.py  download_remaining.py  download_species_photos.py  dump_prod_db.sh  expand_crosswalk.py  extract_whales.py  fetch_aphia_ids.py  generate_crosswalk.py  resolve_missing.py  restore_prod_db.sh  upload_assets.sh
tests/: conftest.py  test_aggregation.py  test_analysis.py  test_audio.py  test_backend.py  test_config.py  test_utils.py  test_validation.py
transform/: .user.yml  dbt_project.yml  profiles.yml
transform/macros/: risk_category.sql  season_from_month.sql  sub_scores.sql  weighted_risk_score.sql
transform/models/marts/: fct_collision_risk.sql  fct_collision_risk_ml.sql  fct_collision_risk_ml_projected.sql  fct_collision_risk_seasonal.sql  fct_monthly_traffic.sql  fct_species_risk.sql  fct_strike_risk_training.sql  fct_whale_sdm_seasonal.sql  fct_whale_sdm_training.sql  mart_marts.yml
transform/models/staging/: sources.yml  stg_cetacean_sightings.sql  stg_cmip6_ocean_covariates.sql  stg_marine_protected_areas.sql  stg_nisi_risk_grid.sql  stg_ocean_covariates.sql  stg_ship_strikes.sql  stg_speed_zones.sql  stg_staging.yml
transform/seeds/: seeds.yml
(+43 files in other folders)
