[project]
name = "marine-risk-mapping"
version = "0.1.0"
description = "Marine risk mapping platform combining AIS vessel data, whale sightings, and ocean data to identify at-risk areas"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.52",
    "duckdb>=1.4.4",
    "geopandas>=1.1.2",
    "httpx>=0.28.1",
    "matplotlib>=3.10.8",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=23.0.1",
    "rasterio>=1.5.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.4",
    "pre-commit>=4.5.1",
    "ruff>=0.15.1",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "UP",  # pyupgrade (modernise syntax)
    "B",   # flake8-bugbear (common bugs)
    "SIM", # flake8-simplify (simplify code)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
